@@ -1,9 +1,11 @@
 package com.spacefleet.spaceshipapi.service;
 
+import com.spacefleet.spaceshipapi.dto.PaginatedResponseDTO;
 import com.spacefleet.spaceshipapi.dto.SpaceshipDTO;
 import com.spacefleet.spaceshipapi.exception.NotFoundException;
 import com.spacefleet.spaceshipapi.model.Spaceship;
 import com.spacefleet.spaceshipapi.repository.SpaceshipRepository;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
@@ -14,8 +16,8 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class SpaceshipService {
 
@@ -23,6 +25,11 @@ public class SpaceshipService {
     private final KafkaTemplate<String, String> kafkaTemplate;
 
     private static final String TOPIC = "spaceship.events";
+    private static final String ERROR_MESSAGE_RESULT_CANT_BE_NULL = "Result Page can not be null";
+    private static final String ERROR_MESSAGE_INVALID_PAGINATION_PARAMS = "Invalid pagination params";
+    private static final String ERROR_MESSAGE_SPACESHIP_NOT_FOUND_WITH_ID = "Spaceship not found with id: ";
+    private static final String ERROR_MESSAGE_SPACESHIP_FAILED_PUSH_KAFKA = "Failed to send deletion event to Kafka for spaceship with ID {}: {}";
+    private static final String MESSAGE_DELETED_SPACESHIP_WITH_ID = "Deleted spaceship: ";
 
     @Autowired
     public SpaceshipService(SpaceshipRepository repository
@@ -36,73 +43,97 @@ public class SpaceshipService {
         return repository.findAll()
                 .stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Page<SpaceshipDTO> findAllPaginated(int page, int size) {
+    public PaginatedResponseDTO<SpaceshipDTO> findAllPaginated(int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
-        return repository.findAll(pageable)
-                .map(this::toDTO);
+        Page<Spaceship> pageResult = repository.findAll(pageable);
+        return buildPaginatedResponse(pageResult);
+    }
+
+    private PaginatedResponseDTO<SpaceshipDTO> buildPaginatedResponse(Page<Spaceship> spaceshipPage) {
+        if (spaceshipPage == null) {
+            throw new IllegalArgumentException(ERROR_MESSAGE_RESULT_CANT_BE_NULL);
+        }
+        if (spaceshipPage.getNumber() < 0 || spaceshipPage.getSize() <= 0) {
+            throw new IllegalArgumentException(ERROR_MESSAGE_INVALID_PAGINATION_PARAMS);
+        }
+
+        List<SpaceshipDTO> content = spaceshipPage
+                .getContent()
+                .stream()
+                .map(this::toDTO)
+                .toList();
+
+        return new PaginatedResponseDTO<>(
+                content,
+                spaceshipPage.getNumber(),
+                spaceshipPage.getSize(),
+                spaceshipPage.getTotalElements(),
+                spaceshipPage.getTotalPages()
+        );
     }
 
     @Cacheable("spaceshipById")
     public SpaceshipDTO findById(String id) {
         Spaceship ship = repository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Spaceship not found with id: " + id));
+                .orElseThrow(() -> new NotFoundException(ERROR_MESSAGE_SPACESHIP_NOT_FOUND_WITH_ID + id));
         return toDTO(ship);
     }
 
-    public List<SpaceshipDTO> findByName(String name) {
-        return repository.findByNameContainingIgnoreCase(name)
-                .stream()
-                .map(this::toDTO)
-                .collect(Collectors.toList());
+    public PaginatedResponseDTO<SpaceshipDTO> findByNamePaginated(String name, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Spaceship> pageResult = repository.findByNameContainingIgnoreCase(name, pageable);
+        return buildPaginatedResponse(pageResult);
     }
 
     public SpaceshipDTO create(SpaceshipDTO dto) {
         Spaceship entity = toEntity(dto);
         Spaceship saved = repository.save(entity);
-        //kafkaTemplate.send(TOPIC, "Created spaceship: " + saved.getId());
         return toDTO(saved);
     }
 
     public SpaceshipDTO update(String id, SpaceshipDTO dto) {
         Optional<Spaceship> optional = repository.findById(id);
         if (optional.isEmpty()) {
-            throw new NotFoundException("Spaceship not found with id: " + id);
+            throw new NotFoundException(ERROR_MESSAGE_SPACESHIP_NOT_FOUND_WITH_ID + id);
         }
         Spaceship spaceship = optional.get();
-        spaceship.setName(dto.getName());
-        spaceship.setModel(dto.getModel());
-        spaceship.setManufacturer(dto.getManufacturer());
+        spaceship.setName(dto.name());
+        spaceship.setModel(dto.model());
+        spaceship.setManufacturer(dto.manufacturer());
         Spaceship updated = repository.save(spaceship);
-        //kafkaTemplate.send(TOPIC, "Updated spaceship: " + updated.getId());
         return toDTO(updated);
     }
 
     public void delete(String id) {
         if (!repository.existsById(id)) {
-            throw new NotFoundException("Spaceship not found with id: " + id);
+            throw new NotFoundException(ERROR_MESSAGE_SPACESHIP_NOT_FOUND_WITH_ID + id);
         }
         repository.deleteById(id);
-        kafkaTemplate.send(TOPIC, "Deleted spaceship: " + id);
+
+        try {
+            kafkaTemplate.send(TOPIC, MESSAGE_DELETED_SPACESHIP_WITH_ID + id);
+        } catch (Exception ex) {
+            log.error(ERROR_MESSAGE_SPACESHIP_FAILED_PUSH_KAFKA, id, ex.getMessage(), ex);
+        }
     }
 
     private SpaceshipDTO toDTO(Spaceship spaceship) {
-        return SpaceshipDTO.builder()
-                .id(spaceship.getId())
-                .name(spaceship.getName())
-                .model(spaceship.getModel())
-                .manufacturer(spaceship.getManufacturer())
-                .build();
+        return new SpaceshipDTO(
+                spaceship.getId(),
+                spaceship.getName(),
+                spaceship.getModel(),
+                spaceship.getManufacturer());
     }
 
     private Spaceship toEntity(SpaceshipDTO dto) {
         return Spaceship.builder()
-                .id(dto.getId())
-                .name(dto.getName())
-                .model(dto.getModel())
-                .manufacturer(dto.getManufacturer())
+                .id(dto.id())
+                .name(dto.name())
+                .model(dto.model())
+                .manufacturer(dto.manufacturer())
                 .build();
     }
 }
